# context-collaboration

./: .cruft.json  .env.public  .gitignore  404.html  ADDING_MAPPINGS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  asserted_and_inferred_mappings_wide.tsv  cumulative_attributed_subset_mapping_including_invalids.tsv  index.html  mkdocs.yml  project.Makefile  pyproject.toml  questions.txt  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
assets/: HARMONIZER_TEMPLATES.yaml
assets/documentation/: alignment-linkml-schemas-owl-ontologies.md  mapping_problem_statement.md  ncbi-biosample-ebs-suggestions.md
assets/exclusion_lists/: biome_relation_object_exclusions.txt  biome_relation_predicate_exclusions.txt  environmental_material_relation_object_exclusions.txt  environmental_material_relation_predicate_exclusions.txt
birth_date/: index.html
context-collaboration/: index.html
description/: index.html
entries/: index.html
examples/: README.md  context_collaboration_template.csv  context_collaboration_template.tsv  context_collaboration_template.yaml  context_collaboration_training.csv  varied-training-minimal-comments.yaml
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: context_collaboration.xlsx
project/jsonld/: context_collaboration.context.jsonld  context_collaboration.jsonld
project/jsonschema/: context_collaboration.schema.json
project/owl/: context_collaboration.owl.ttl
project/prefixmap/: context_collaboration.yaml
project/shacl/: context_collaboration.shacl.ttl
project/shex/: context_collaboration.shex
search/: search_index.json
src/docs/: about.md
src/scripts/: __init__.py  concatenate_tsvs.py  csv_left_join_on_first_cols.py  expand_subset.py  extract-templates.py  fetch_biosamples.py  get_submissions.py  package_name_counts.tsv  pivot_mappings_to_long.py  pivot_mappings_to_wide.py  schemasheets_template_mixs_extensions_filter.py  ubergraph_pivot.py  (+1 more)
tests/: __init__.py  test_data.py
vital_status/: index.html
(+47 files in other folders)
