[tool.poetry]
name = "context_collaboration"
version = "0.1.0"
description = "Resources for data-driven and collaboratively refined mappings between ontology classes like ENVO:00002259 ‘agricultural soil’ to MIxS environmental context questions like env_medium, subsetted according to MIxS environmental extensions like Agriculture."
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"
readme = "README.md"
#include = ["README.md", "src/context_collaboration/schema", "project"]
include = ["README.md", "src/scripts", "src/context_collaboration/schema", "project"]


[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
quantulum3 = { version = "^0.9", extras = ["classifier"] }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
schemasheets-template-mixs-extensions-filter = "scripts.schemasheets_template_mixs_extensions_filter:main"
sparql-query-cli = "scripts.sparql_query_cli:main"
ubergraph-pivot = "scripts.ubergraph_pivot:run_sparql_query"
expand-subset = 'scripts.expand_subset:process_tsv'
concatenate-tsvs = 'scripts.concatenate_tsvs:concatenate_tsv'
pivot-mappings-to-wide = 'scripts.pivot_mappings_to_wide:process_data'
